--- a/examples/html/stylesheet.css
+++ b/examples/html/stylesheet.css
@@ -4,3 +4,4 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
 .boolean { color: blue; }
 .null { color: magenta; }
 .key { color: red; }
+.nav-link { padding: 5px }
